# toolkit-toys

./: README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  main.js  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: pwstore.sql
src-tauri/src/: config.rs  main.rs
src/cm5/theme/: funtoolkits.css
src/components/: Calendar.vue  NavBar2.vue  PasswordNote.vue  Settings.vue  Todos.vue  Toolkits.vue
src/components/common/: TextEditor.vue
src/components/tools/: Cronparser.vue  JsonFormatter.vue  NanoidGenerator.vue  PasswordGenerator.vue  SqlFormatter.vue  TimestampConvert.vue  ToolFun.vue
src/config/: router.ts  theme.ts  timezones.js  toolkitsHelper.ts
src/hooks/: useCurrentInstance.ts  useGolbal.js  useThemeWatch.js
src/locale/core/: i18n.ts
src/locale/lang/: en.js  ja.js  zh-Hans.js
src/plugins/: globalUtilsPlugin.ts  vuetify.js
src/utils/: event-bus.ts  globalUtils.ts  simplealert.ts
